# monitoring_and_analysis

./: .gitcliff.toml  .gitignore  404.html  CHANGELOG.md  README.md  cliff.toml  commit-template.txt  index.html  monitoring.py  pyproject.toml  release.sh  requirements.txt  results.py  setup.py  sitemap.xml  test.py  test_decorator_output.py  test_monitors.ipynb
.github/workflows/: test.yml
docs-site/: mkdocs.yml
docs-site/docs/: index.md  quickstart.md  reference.md
docs-site/site/: 404.html
docs-site/site/quickstart/: index.html
logs/: error_results.csv  error_results.parquet  timing_results.csv  timing_results.parquet
monitoring_and_analysis/: __init__.py  analysis.py  monitoring.py
pymaap/: __init__.py  analysis.py  logging_backend.py  logging_setup.py  monitoring.py
quickstart/: index.html
reference/: index.html
reports/pymaap/: class_index.html  function_index.html  index.html  status.json  z_da6a4847b7505ca7___init___py.html  z_da6a4847b7505ca7_analysis_py.html  z_da6a4847b7505ca7_logging_backend_py.html  z_da6a4847b7505ca7_logging_setup_py.html  z_da6a4847b7505ca7_monitoring_py.html
search/: search_index.json
tests/: test_analysis.py  test_general_logger.py  test_monitoring.py
