[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMAAP"
version = "0.1.0"
description = "PyMAAP: Python Monitoring and Analysis Package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

dependencies = [
  "pandas",
  "psutil",
  "pyarrow",
  "matplotlib",
  "seaborn"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-html", "sphinx", "twine", "build", "pandas", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
include = ["pymaap*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*vert.*will be deprecated.*:PendingDeprecationWarning"
]