[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMAAP"
version = "0.1.3"
description = "PyMAAP: Python Monitoring and Analysis Package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Samuel Alter" }]
license = { text = "MIT" }
dependencies = [
  "geopandas>=1.0.0",
  "pandas>2.0",
  "psutil>=7.0.0",
  "pyarrow>=19.0",
  "matplotlib>=3.10",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-html", "sphinx", "twine", "build", "pandas", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
include = ["pymaap*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*vert.*will be deprecated.*:PendingDeprecationWarning"
]